# File-Manager

./: .gitignore  CMakeLists.txt  File-Manager  README.md  todo.txt
src/: filesInDir.c  filesInDir.h  main.c
src/dsa/: node.c  node.h  stack.c  stack.h
src/main_menu/: main_menu.c
src/setting_menu/: setting_menu.c  setting_menu.h
src/shortcut_menu/: shortcut_menu.c  shortcut_menu.h
src/tabs/: tabs.c  tabs.h
src/tabs/tab/: tab.c  tab.h
